# rdf-triple-browser

./: .gitignore  Makefile  NOTES.org  NOTICE  README.org  TODO.txt  notes.txt  pom.xml
experiments/: tt.lva
experiments/haskell-threepenny-gui-experiments/: .Notes.org  ex.cabal  stack.yaml
experiments/haskell-threepenny-gui-experiments/src/: A.hs  CRUD.hs  CRUD2.hs  Diagrams.hs  JaccoUnsafeFRPExample.hs  Q.hs  TaldykinFRPAndEventExample.hs  ThreepennyExternalNewEventDemo.hs  ThreepennyExternalNewEventDemo.org
gwt/: pom.xml
gwt/src/main/java/org/openhc/triplebrowser/gwt/: Main.gwt.xml
gwt/src/main/java/org/openhc/triplebrowser/gwt/client/: BrowserHistory.java-save  DevTime.java  FileUploader.java  Layout.java  Main.java  QueryManager.java  QueryPanel.java  SPVItem.java  SPVPanel.java  ServerCalls.java  Service.java  ServiceAsync.java  Test.java
gwt/src/main/java/org/openhc/triplebrowser/gwt/common/: Constants.java  QueryRequest.java  QueryResponse.java  SPVItem.java  Triple.java  Util.java
gwt/src/main/java/org/openhc/triplebrowser/gwt/server/: FileUploaderServlet.java  Jena.java  ServiceImpl.java  ServiceImplDelegate.java
gwt/src/main/webapp/: Main.html  style.css
gwt/src/main/webapp/WEB-INF/: web.xml
haskell/: .gitignore  LICENSE  rtb.cabal  stack.yaml
haskell-threepenny-gui-experiments/: .Notes.org
haskell/reflex-based/: Makefile  README.html  README.org  RTB.hs  build.sh  index.html  rdf-triple-browser.cabal  wiring-diagram.odp
haskell/reflex-based/src/: Main.hs  RTB.hs  at.hs  sparql-json.hs
haskell/src/: CRUD2.hs  Diagrams.hs  Jacco.hs  JaccoUnsafe.hs  JaccoUnsafeFRPExample.hs  MD.hs  Main.hs  RTB.hs  RTBQ.hs  Taldykin.hs  TaldykinDiagram.hs  TaldykinFRPAndEventExample.hs  X.hs
haskell/threepenny-based/: rdf-triple-browser.cabal  stack.yaml
haskell/threepenny-based/src/: RTB.hs  RTBQ.hs
java/gwt/: pom.xml
java/gwt/src/main/java/org/openhc/triplebrowser/gwt/client/: Main.java  QueryManager.java  QueryPanel.java  ServerCalls.java  Service.java  ServiceAsync.java  Test.java
java/gwt/src/main/java/org/openhc/triplebrowser/gwt/common/: QueryRequest.java  README.txt  SPVItem.java
java/gwt/src/main/java/org/openhc/triplebrowser/gwt/server/: Jena.java  ServiceImplDelegate.java
java/gwt/src/main/webapp/: Main.html  style.css
java/swing/src/main/java/org/openhc/triplebrowser/swing/client/: Main.java  TripleBrowser.java  WebBrowserImplDJNative.java-save
java/swing/src/main/java/org/openhc/triplebrowser/swing/client/obsolete/: Test.form
java/swing/src/main/resources/: Main.properties
swing/: pom.xml
swing/src/main/java/org/openhc/triplebrowser/swing/client/: Main.java  QueryManager.java  QueryPanel.java  SPVPanel.java  ServerCalls.java  Test.java  TripleBrowser.java  TripleBrowserAboutBox.java  TripleBrowserLayout.java  WebBrowser.java  WebBrowserImplDJNative.java-save  WebBrowserImplTextArea.java
swing/src/main/java/org/openhc/triplebrowser/swing/client/obsolete/: SwingAboutBox.form  SwingView.form
swing/src/main/resources/: TripleBrowser.properties  TripleBrowserLayout.properties
