name:                rdf-triple-browser
version:             0.1.0.0
-- synopsis:            
-- description:         
homepage:            http://haroldcarr.com/
-- license:             
license-file:        LICENSE
author:              Harold Carr
maintainer:          harold.carr@gmail.com
-- copyright:           
-- category:            
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  exposed-modules:     RTB
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >=4.6 && <4.7
                       , hsparql >= 0.2.5
                       , threepenny-gui >= 0.4.2.0
                       -- maybe not needed in final
                       , rdf4h >= 1.2.5
                       -- not sure if needed
                       , containers >= 0.5.0.0
                       , stm >= 2.4.2
                       , random >= 1.0.1.1
                       -- for testing
                       , HUnit >=1.2 && <1.3
                       , test-hunit-util >=0.1 && <0.2
                       -- for the diagram
                       , filepath >= 1.3.0.1
                       , fgl >= 5.4.2.4
                       , graphviz >= 2999.17.0.1
                       , data-graphviz-hc-util >= 0.1.0.0
                       , text >= 0.11.3.1
                       -- for examples
                       , safe >= 0.3.5
  hs-source-dirs:      src
  default-language:    Haskell2010