name:                ex
version:             0.1.0.0
-- synopsis:            
-- description:         
homepage:            http://haroldcarr.com/
-- license:             
-- license-file:        LICENSE
author:              Harold Carr
maintainer:          harold.carr@gmail.com
-- copyright:           
-- category:            
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  exposed-modules:     CRUD
                     , CRUD2
                     , JaccoUnsafeFRPExample
                     , Q
                     , TaldykinFRPAndEventExample
                     , ThreepennyExternalNewEventDemo
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base
                     , containers
                     , data-graphviz-hc-util
                     , graphviz
                     , hsparql
                     , network
                     , network-uri
                     , random
                     , rdf4h
                     , text
                     , threepenny-gui
  hs-source-dirs:      src
  default-language:    Haskell2010