name:                rdf-triple-browser
version:             0.1.0.0
homepage:            http://haroldcarr.com/
author:              Harold Carr
maintainer:          harold.carr@gmail.com
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     RTB
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base
                     , aeson
                     , bytestring
                     , containers
                     , reflex
                     , reflex-dom
                     , text
  hs-source-dirs:      src
  default-language:    Haskell2010