name:                rdf-triple-browser
version:             0.1.0.0
homepage:            http://haroldcarr.com/
author:              Harold Carr
maintainer:          harold.carr@gmail.com
build-type:          Simple
cabal-version:       >=1.10

executable RTB
  hs-source-dirs:      src
  main-is:             Main.hs
  build-depends:       base
                     , aeson
                     , bytestring
                     , containers
                     , network-uri
                     , reflex
                     , reflex-dom
                     , text
  default-language:    Haskell2010