name:                rdf-triple-browser
version:             0.1.0.0
-- synopsis:            
-- description:         
homepage:            http://haroldcarr.com/
-- license:             
license-file:        LICENSE
author:              Harold Carr
maintainer:          harold.carr@gmail.com
-- copyright:           
-- category:            
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  exposed-modules:     RTB
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base
                     , containers
                     , hsparql
                     , rdf4h
                     , text
                     , threepenny-gui
  hs-source-dirs:      src
  default-language:    Haskell2010